--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/curriculum-vitae.css" title="Color">
+  <link rel="stylesheet" href="curriculum-vitae.css" title="Color">
   <title>Currículum Vitae (corto). Escribe tu nombre.  </title>
 </head>
 
