--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="">
   <link rel="stylesheet" href="curriculum-vitae.css" title="Color">
   <title>Currículum Vitae (corto). Escribe tu nombre.  </title>
 </head>
